# tpGrupal

./: .gitignore  CMakeLists.txt  CMakeLists_aux.txt  Makefile  Readme.md  rayCasting.cpp
build-development/: Makefile  compilation_command.txt
build-install/: Makefile  install_command.txt  uninstall_command.txt
client_src/: ClientConfigHandler.cpp  ClientConfigHandler.h  ClientSettings.cpp  ClientSettings.h  Enemy.cpp  Enemy.h  Explosion.cpp  Explosion.h  Game.cpp  Game.h  Hud.cpp  Hud.h  Makefile  Menu.cpp  Menu.h  Object.cpp  Object.h  Player.cpp  Player.h  PlayerWeapon.cpp  PlayerWeapon.h  ResourcesLoader.cpp  ResourcesLoader.h  ThRequester.cpp  ThRequester.h  ThSender.cpp  ThSender.h  World.cpp  World.h  ZRenderable.cpp  ZRenderable.h  client  client.cpp  clientRun.sh  client_helper.cpp  client_helper.h  client_log.txt  log.txt  minimal.supp  rayCaster.cpp  (+3 more)
client_src/Map/: DoorTile.cpp  DoorTile.h  SecretDoorTile.cpp  SecretDoorTile.h  SecretXDoorTile.h  SecretYDoorTile.h  Tile.h  WallTile.h  WorldMap.cpp  WorldMap.h  XDoorTile.h  YDoorTile.h
client_src/SDLWrappers/: SdlContexto.cpp  SdlContexto.h  SdlException.h  SdlMusic.h  SdlRenderer.cpp  SdlRenderer.h  SdlSound.cpp  SdlSound.h  SdlTexture.cpp  SdlTexture.h  SdlWindow.cpp  SdlWindow.h
common_src/: Action.cpp  Action.h  BlockingQueueIntention.cpp  BlockingQueueIntention.h  BlockingQueueSnapshot.cpp  BlockingQueueSnapshot.h  ConnectionClosedException.cpp  ConnectionClosedException.h  EmptyQueueException.cpp  EmptyQueueException.h  Intention.cpp  Intention.h  MapHandler.cpp  MapHandler.h  ProtectedQueueAction.cpp  ProtectedQueueAction.h  ProtectedQueueException.cpp  ProtectedQueueException.h  ProtectedQueueIntention.cpp  ProtectedQueueIntention.h  Protocol.cpp  Protocol.h  Serializer.cpp  Serializer.h  Snapshot.cpp  Snapshot.h  Timer.cpp  Timer.h  blocking_queue_events.cpp  blocking_queue_events.h  blocking_queue_exception.cpp  blocking_queue_exception.h  common_exception.cpp  common_exception.h  common_socket.cpp  common_socket.h  common_socket_exception.cpp  common_socket_exception.h  common_thread.cpp  common_thread.h  (+8 more)
common_src/SDLWrappers/: SdlContext.cpp  SdlContext.h  SdlException.h  SdlFont.cpp  SdlFont.h  SdlMusic.cpp  SdlMusic.h  SdlSound.cpp  SdlSound.h  SdlTexture.cpp
editor_src/: Makefile  constants.h  editor  editor.cpp  map_ui.cpp  map_ui.h  menu_ui.cpp  menu_ui.h
editor_src/ConfigManager/: ClientConfigHandler.cpp  ClientConfigHandler.h  EditorConfigHandler.cpp  EditorConfigHandler.h  MapHandler.cpp  MapHandler.h  ServerConfigHandler.cpp
editor_src/SDLWrappers/: SdlContexto.h  SdlException.h  SdlFont.cpp  SdlRenderer.cpp  SdlRenderer.h  SdlTexture.cpp  SdlTexture.h  SdlWindow.cpp  SdlWindow.h
lua_src/: Makefile  fun  fun.cpp  fun.h  fun.lua
server_src/: Config.h  Constants.h  Door.cpp  Door.h  Enemy.cpp  Enemy.h  EnemyLogic.lua  Flujo_e_ideas.md  GameHandler.cpp  GameHandler.h  GamePlay.cpp  GamePlay.h  HitscanRaycast.cpp  HitscanRaycast.h  IdMaker.cpp  IdMaker.h  Inventory.cpp  Inventory.h  Makefile  Map.cpp  Map.h  Player.cpp  Player.h  Position.cpp  Position.h  ServerConfigHandler.cpp  ServerConfigHandler.h  ThClient.cpp  ThClient.h  ThClientSender.cpp  ThClientSender.h  ThServer.cpp  ThServer.h  Ticker.h  Weapon.h  coordinate.h  error.txt  helper.cpp  helper.h  player.cpp  (+23 more)
(+29 files in other folders)
